--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "querystring": "^0.2.1",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.1.3",
+    "tesseract.js": "^2.1.5",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.32",
     "uuid": "^8.3.2"
